# stdr_simulator

stdr_msgs/: CMakeLists.txt  package.xml
stdr_msgs/action/: SpawnRobot.action
stdr_msgs/msg/: CO2SensorMeasurementMsg.msg  CO2SensorMsg.msg  LaserSensorMsg.msg  Noise.msg  RfidSensorMeasurementMsg.msg  RfidSensorMsg.msg  RobotMsg.msg  SonarSensorMsg.msg  SoundSensorMeasurementMsg.msg  ThermalSensorMeasurementMsg.msg  ThermalSensorMsg.msg
stdr_msgs/srv/: AddCO2Source.srv  AddRfidTag.srv  AddSoundSource.srv  AddThermalSource.srv  LoadMap.srv  MoveRobot.srv
